--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -24,6 +24,12 @@ startup_mode = "Maximized"
 x = 10
 y = 10
 
+[font]
+normal = { family = "FiraCode Nerd Font", style = "Regular" }
+bold = { family = "FiraCode Nerd Font", style = "Bold" }
+italic = { family = "FiraCode Nerd Font", style = "Italic" }
+bold_italic = { family = "FiraCode Nerd Font", style = "Bold Italic" }
+
 [scrolling]
 history = 10000   # Number of lines to remember in the scrollback buffer
 multiplier = 3    # Scroll multiplier (lines per scroll event)
