--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -25,25 +25,24 @@ x = 10
 y = 10
 
 [font]
-normal = { family = "FiraCode Nerd Font", style = "Regular" }
-bold = { family = "FiraCode Nerd Font", style = "Bold" }
-italic = { family = "FiraCode Nerd Font", style = "Italic" }
-bold_italic = { family = "FiraCode Nerd Font", style = "Bold Italic" }
+size = 8
+
+[font.normal]
+family = "JetBrainsMono Nerd Font"
+style = "Regular"
+
+[font.bold]
+family = "JetBrainsMono Nerd Font"
+style = "Bold"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font"
+style = "Italic"
 
 [scrolling]
 history = 10000   # Number of lines to remember in the scrollback buffer
 multiplier = 3    # Scroll multiplier (lines per scroll event)
 # smooth = true     # Enable smooth scrolling
-
-# [font]
-# normal_family = "MesloLGS Nerd Font Mono"
-# normal_style = "Regular"
-# bold_family = "MesloLGS Nerd Font Mono"
-# bold_style = "Bold"
-# italic_family = "MesloLGS Nerd Font Mono"
-# italic_style = "Italic"
-# size = 11.0
-# use_ligatures = true
 
 [cursor.style]
 shape = "Block"
