updated alacritty zellij and other config files

--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -7,12 +7,11 @@
 
 [general]
 import = [
-  "~/.config/alacritty/themes/themes/midnight-haze.toml"
+  "~/.config/alacritty/themes/themes/citylights.toml"
 ]
 
 [ env ]
 TERM = "xterm-256color"
-# PATH = "/home/dinesh-kanth/.fzf/bin:$PATH"
 
 [window]
 # decorations = "None"
@@ -20,24 +19,27 @@ opacity = 1
 blur = true
 startup_mode = "Maximized"
 
-[window.padding]
-x = 10
-y = 10
+# [window.padding]
+# x = 5
+# y = 5
 
 [font]
-size = 8
+size = 12
 
 [font.normal]
-family = "JetBrainsMono Nerd Font"
-style = "Regular"
+family = "Monospace"
 
-[font.bold]
-family = "JetBrainsMono Nerd Font"
-style = "Bold"
-
-[font.italic]
-family = "JetBrainsMono Nerd Font"
-style = "Italic"
+# [font.normal]
+# family = "JetBrainsMono Nerd Font"
+# style = "Regular"
+#
+# [font.bold]
+# family = "JetBrainsMono Nerd Font"
+# style = "Bold"
+#
+# [font.italic]
+# family = "JetBrainsMono Nerd Font"
+# style = "Italic"
 
 [scrolling]
 history = 10000   # Number of lines to remember in the scrollback buffer
